--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,13 +1,76 @@
 @import "./variables";
 
 @mixin mobile {
-  @media screen and (max-width: $s-mobile) {
+  @media screen and (max-width: $sMobile) {
     @content;
   }
 }
 
 @mixin desktop {
-  @media screen and (min-width: calc($s-mobile + 1px)) {
+  @media screen and (min-width: calc($sMobile + 1px)) {
     @content;
   }
+}
+
+@mixin colorCoded($type...) {
+  .colorCoded {
+    padding: 0.25rem 0.75rem;
+    border-radius: 1rem;
+    font-weight: 600;
+
+    &.unknown {
+      background-color: var(--c-unknown);
+      color: var(--c-unknown-text);
+    }
+
+    @if index($type, $studentState) {
+      &.canceled {
+        background-color: var(--c-canceled);
+        color: var(--c-white);
+      }
+
+      &.active {
+        background-color: var(--c-active);
+        color: var(--c-white);
+      }
+
+      &.pending {
+        background-color: var(--c-pending);
+        color: var(--c-white);
+      }
+
+      &.finished {
+        background-color: var(--c-finished);
+        color: var(--c-white);
+      }
+
+      &.postponed {
+        background-color: var(--c-postponed);
+        color: var(--c-white);
+      }
+    }
+
+    @if index($type, $subscription) {
+      &.fullPay {
+        background-color: var(--c-success-dark);
+        color: var(--c-white);
+      }
+
+      &.partialPay {
+        background-color: var(--c-success);
+        color: var(--c-white);
+      }
+
+      &.noPay {
+        background-color: var(--c-success-light);
+        color: var(--c-success-dark);
+      }
+    }
+  }
+}
+
+@mixin optionsList {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
 }
