--- a/src/components/SubscriptionSelector/SubscriptionSelector.style.scss
+++ b/src/components/SubscriptionSelector/SubscriptionSelector.style.scss
@@ -1,7 +1,8 @@
+@import "styles/utils";
+
 .SubscriptionSelector {
-  display: flex;
-  flex-direction: column;
-  gap: 0.25rem;
+  @include optionsList();
+  @include colorCoded($subscription);
 
   .partialPay {
     &.amount {
