--- a/src/context/Popup/Popup.style.scss
+++ b/src/context/Popup/Popup.style.scss
@@ -9,13 +9,13 @@
   left: 0;
   z-index: 10;
 
-  .background {
+  .Background {
     width: 100vw;
     height: 100vh;
     background-color: var(--c-shadow-dark);
   }
 
-  .card {
+  .Card {
     position: absolute;
     background-color: var(--c-white);
     min-width: 10rem;
