Fixed style bleading

--- a/src/components/StatusSelector/StatusSelector.style.scss
+++ b/src/components/StatusSelector/StatusSelector.style.scss
@@ -2,7 +2,7 @@
 
 .StatusSelector {
   @include optionsList();
-  @include colorCoded($studentState);
+  @include colorCodedButton($studentState);
 
   .postponed {
     &.date {
