--- a/src/components/Table/Table.style.scss
+++ b/src/components/Table/Table.style.scss
@@ -1,15 +1,20 @@
 /* TABLE */
 
-.table {
+.Table {
   width: 100%;
   border-collapse: collapse;
 
   th,
   td {
-    padding: 0.75rem 1.5rem;
+    padding: 0.75rem 1rem;
 
     &.prefix {
-      padding-inline: 0.5rem;
+      padding-inline: 0.5rem 0.375rem;
+
+      & + th,
+      & + td {
+        padding-inline-start: 0.375rem;
+      }
     }
 
     &.fit {
@@ -26,11 +31,6 @@
     &:last-child {
       padding-inline-end: 0.5rem;
     }
-  }
-
-  .prefix + th,
-  .prefix + td {
-    padding-inline-start: 0.5rem;
   }
 
   thead {
