--- a/src/components/StatusSelector/StatusSelector.style.scss
+++ b/src/components/StatusSelector/StatusSelector.style.scss
@@ -32,13 +32,7 @@
         align-items: center;
 
         &::after {
-          content: "";
-          width: 1rem;
-          height: 0.5rem;
-          border-left: 2px solid var(--c-white);
-          border-bottom: 2px solid var(--c-white);
-          position: absolute;
-          transform: translateY(-2px) rotate(-45deg);
+          @include checkMark($y: -2px);
         }
       }
     }
