--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -74,3 +74,24 @@
   flex-direction: column;
   gap: 0.25rem;
 }
+
+@mixin checkMark($x: 0px, $y: 0px) {
+  content: "";
+  width: 1rem;
+  height: 0.5rem;
+  border-left: 2px solid var(--c-white);
+  border-bottom: 2px solid var(--c-white);
+  position: absolute;
+  transform: translate($x, $y) rotate(-45deg);
+}
+
+@mixin mainButton {
+  height: 3rem;
+  padding: 1rem 2rem;
+  border-radius: 0.25rem;
+  background-color: var(--c-success);
+  font-size: 1rem;
+  font-weight: 600;
+  color: var(--c-white);
+  text-transform: capitalize;
+}
