--- a/src/pages/Students/StudentList/StudentList.style.scss
+++ b/src/pages/Students/StudentList/StudentList.style.scss
@@ -13,7 +13,21 @@
     &.colorCoded {
       padding: 0.5rem 1rem;
     }
-  }
 
-  @include colorCodedButton($studentState, $subscription);
+    .note {
+      background-color: transparent;
+      width: 100%;
+      text-align: start;
+      overflow-x: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      font-size: 1rem;
+
+      &.createNote {
+        text-align: center;
+      }
+    }
+
+    @include colorCodedButton($studentState, $subscription);
+  }
 }
