--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -95,3 +95,26 @@
   color: var(--c-white);
   text-transform: capitalize;
 }
+
+@mixin noFieldBorder {
+  border: none;
+
+  &:focus-within {
+    outline: none;
+  }
+}
+
+@mixin fieldBorder {
+  border: 1px solid var(--c-shadow-dark);
+  border-radius: 0.375rem;
+
+  &:focus-within {
+    outline: 2px solid var(--c-primary-light);
+    border-color: var(--c-primary-light);
+  }
+
+  &.invalid {
+    outline: 2px solid var(--c-error);
+    border-color: var(--c-error);
+  }
+}
