--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -100,6 +100,12 @@
   border: none;
 
   &:focus-within {
+    border: none;
+    outline: none;
+  }
+
+  &.invalid {
+    border: none;
     outline: none;
   }
 }
