--- a/src/components/Form/AutoCompleatInput/AutoCompleatInput.style.scss
+++ b/src/components/Form/AutoCompleatInput/AutoCompleatInput.style.scss
@@ -1,7 +1,21 @@
+@mixin option {
+  width: 100%;
+  height: 2.5rem;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  white-space: nowrap;
+}
+
 .AutoCompleatInput {
   position: relative;
 
+  .selected {
+    @include option();
+  }
+
   .arrow {
+    min-width: 1.5rem;
     transform: rotate(180deg);
 
     &.isOpen {
@@ -12,28 +26,25 @@
   .menu {
     min-width: 100%;
     max-height: 30rem;
-    padding: 0.5rem;
+    padding: 0.25rem;
     border-radius: 0.375rem;
     border: 1px solid var(--c-shadow);
     background-color: var(--c-white);
     box-shadow: 2px 2px 8px var(--c-shadow);
     list-style-type: none;
     position: absolute;
-    top: calc(100% + 0.5rem);
+    top: calc(100% + 0.375rem);
     z-index: 2;
     overflow-y: auto;
     overflow-x: hidden;
     overscroll-behavior: contain;
 
     .element {
-      height: 2.5rem;
-      display: flex;
-      gap: 1rem;
-      align-items: center;
-      padding-inline: 1.25rem;
+      padding-inline: 0.75rem;
       border-radius: 0.25rem;
       cursor: pointer;
-      white-space: nowrap;
+
+      @include option();
 
       &:hover {
         background-color: var(--c-shadow-light);
