--- a/src/components/Form/Form.style.scss
+++ b/src/components/Form/Form.style.scss
@@ -13,11 +13,11 @@
     align-self: center;
     position: relative;
     bottom: 0;
+    transition: bottom 50ms ease-in;
 
     &:hover {
       bottom: 0.125rem;
-      transition: bottom 50ms ease-in;
-      box-shadow: 0 0.25rem 2px var(--c-shadow);
+      box-shadow: 0 0.25rem 3px -1.5px var(--c-shadow);
     }
 
     &.isSubmitting {
