--- a/src/components/Form/PhoneNumberInput/PhoneNumberInput.style.scss
+++ b/src/components/Form/PhoneNumberInput/PhoneNumberInput.style.scss
@@ -1,18 +1,19 @@
 @import "styles/utils";
 
 .PhoneNumberInput {
+  min-width: 18rem;
+
   & > .FieldWrapper {
     padding-inline: 0;
   }
 
   .countryCode {
-    flex: 2;
-    min-width: 6rem;
+    flex: 4;
   }
 
   .dialNumber {
     flex: 5;
-    display: flex;
-    align-items: center;
   }
+
+  @include errorMessage();
 }
