--- a/src/components/Form/FieldHeader/FieldHeader.style.scss
+++ b/src/components/Form/FieldHeader/FieldHeader.style.scss
@@ -8,12 +8,12 @@
     text-transform: capitalize;
 
     &.invalid {
-      color: var(--c-error);
+      color: var(--c-danger-300);
     }
 
     &.required::after {
       content: " *";
-      color: var(--c-error);
+      color: var(--c-danger-300);
     }
   }
 }
