--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,111 +1,2 @@
-@import url("https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700&family=Josefin+Sans:wght@300;400;500;600;700&display=swap");
-
-@import "./variables";
-@import "./utils";
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  line-height: normal;
-  font-family: "Josefin Sans", "Almarai", sans-serif;
-  font-weight: 400;
-  color: var(--c-black);
-}
-
-html {
-  /* scrollbar-gutter: stable; */
-  // min-width: 800px;
-}
-
-button {
-  border: none;
-  cursor: pointer;
-}
-
-a {
-  text-decoration: initial;
-}
-
-input {
-  line-height: 2;
-}
-
-::-webkit-input-placeholder {
-  line-height: 2;
-}
-
-.Container {
-  // min-width: 40rem;
-  max-width: 55rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-  padding: 2rem;
-  margin-inline: auto;
-  box-shadow: 2px 2px 8px var(--c-shadow);
-  border-radius: 1rem;
-}
-
-.ctaBtn {
-  font-size: 1.75rem;
-  text-transform: uppercase;
-  padding: 0.5em 1rem;
-  border-radius: 0.25rem;
-}
-
-.title {
-  font-size: 1.25rem;
-  text-transform: capitalize;
-
-  & + * {
-    margin-block-start: 0.5rem;
-  }
-
-  &.invalid {
-    color: var(--c-error);
-  }
-
-  &.required::after {
-    content: " *";
-    color: var(--c-error);
-  }
-}
-
-.inputGroup {
-  display: flex;
-  gap: 1rem;
-
-  @include mobile {
-    flex-direction: column;
-  }
-
-  & > * {
-    flex-grow: 1;
-    flex-basis: 0;
-  }
-}
-
-.male {
-  background-color: cadetblue;
-}
-
-.female {
-  background-color: palevioletred;
-}
-
-.mainSection {
-  padding: 3rem;
-  display: grid;
-  gap: 1rem;
-  overflow: auto;
-}
-
-.smallCircle {
-  width: 1rem;
-  height: 1rem;
-  border-radius: 50%;
-  margin-inline: auto;
-}
+@use "base/reset";
+@use "abstracts/variables";
