--- a/src/components/Form/Form.style.scss
+++ b/src/components/Form/Form.style.scss
@@ -1,34 +1,33 @@
 .Form {
+  max-width: 50rem;
+  display: grid;
   gap: 2rem;
 
-  .submit {
-    padding: 0.75em 1.5em;
-    border-radius: 0.375rem;
-    background-color: var(--c-primary);
-    // background-image: linear-gradient(45deg, var(--c-primary-dark) 5%, var(--c-primary) 75%, var(--c-primary-light));
-    color: var(--c-white);
-    font-size: 1rem;
-    font-weight: 600;
-    text-transform: uppercase;
-    align-self: center;
-    position: relative;
-    bottom: 0;
-    transition: bottom 50ms ease-in;
+  .actions {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
 
-    &:hover {
-      bottom: 0.125rem;
-      box-shadow: 0 0.25rem 3px -1.5px var(--c-shadow);
-    }
+    .submit {
+      // position: relative;
+      // bottom: 0;
+      // transition: bottom 50ms ease-in;
 
-    &.isSubmitting {
-      color: var(--c-shadow-dark);
-      background-color: var(--c-shadow);
-      cursor: default;
-    }
+      // &:hover {
+      //   bottom: 0.125rem;
+      //   box-shadow: 0 0.25rem 3px -1.5px var(--c-shadow);
+      // }
 
-    &.isSubmitSuccessful {
-      background-color: var(--c-success);
-      cursor: default;
+      &.isSubmitting {
+        color: var(--c-gray-400);
+        background-color: var(--c-gray-200);
+        cursor: default;
+      }
+
+      &.isSubmitSuccessful {
+        background-color: var(--c-success-300);
+        cursor: default;
+      }
     }
   }
 }
