--- a/src/components/InputField/InputField.style.scss
+++ b/src/components/InputField/InputField.style.scss
@@ -1,26 +1,34 @@
 /* INPUT FIELD */
 
 .InputField {
-  .field {
-    width: 100%;
+  .wrapper {
     height: 3rem;
-    padding: 0.5rem;
-    font-size: 1rem;
+    width: 100%;
+    display: flex;
     border: 1px solid var(--c-primary-dark);
     border-radius: 0.25rem;
+    overflow: hidden;
+
+    &:focus-within {
+      outline: 2px solid var(--c-primary-light);
+      border-color: var(--c-primary-light);
+    }
+
+    &.invalid {
+      outline: 2px solid var(--c-danger-300);
+      border-color: var(--c-danger-300);
+    }
+
+    .field {
+      flex: 1;
+      padding: 0.5rem;
+      font-size: 1rem;
+      border: none;
+    }
   }
 
-  .field:focus {
-    outline: 2px solid var(--c-primary-light);
-    border-color: var(--c-primary-light);
-  }
-
-  .title.invalid {
-    color: var(--c-error);
-  }
-
-  .field.invalid {
-    outline: 2px solid var(--c-error);
-    border-color: var(--c-error);
+  .error {
+    color: var(--c-danger-300);
+    margin-block-start: 0.5rem;
   }
 }
