--- a/src/context/Popup/Popup.style.scss
+++ b/src/context/Popup/Popup.style.scss
@@ -12,7 +12,7 @@
   .Background {
     width: 100vw;
     height: 100vh;
-    background-color: var(--c-shadow-dark);
+    background-color: var(--c-shadow-400);
   }
 
   .Card {
@@ -40,7 +40,7 @@
       background-color: transparent;
 
       &:hover {
-        background-color: var(--c-shadow-light);
+        background-color: var(--c-shadow-100);
       }
     }
   }
