--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -6,7 +6,7 @@
     color: var(--c-white);
 
     &:disabled,
-    &.submitting {
+    &.isLoading {
       color: var(--c-shadow-dark);
       background-color: var(--c-shadow);
       cursor: default;
