--- a/src/components/Form/AutoCompleatInput/AutoCompleatInput.style.scss
+++ b/src/components/Form/AutoCompleatInput/AutoCompleatInput.style.scss
@@ -1,17 +1,23 @@
-@mixin option {
-  width: 100%;
-  height: 2.5rem;
-  display: flex;
-  gap: 0.5rem;
-  align-items: center;
-  white-space: nowrap;
-}
+@use "styles/abstracts/mixins" as *;
 
 .AutoCompleatInput {
   position: relative;
 
+  .Input {
+    position: unset; // fixes an issue with error messages width.
+
+    &.hidden {
+      .field {
+        position: absolute;
+        opacity: 0;
+      }
+    }
+  }
+
   .selected {
-    @include option();
+    @include menuListItem();
+
+    cursor: text;
   }
 
   .arrow {
@@ -26,10 +32,8 @@
 
   .menu {
     min-width: 100%;
-    max-height: 30rem;
+    max-height: 20rem;
     padding: 0.25rem;
-    border-radius: 0.375rem;
-    border: 1px solid var(--c-gray-200);
     background-color: var(--c-white);
     box-shadow: 2px 2px 8px var(--c-shadow-200);
     list-style-type: none;
@@ -40,15 +44,17 @@
     overflow-x: hidden;
     overscroll-behavior: contain;
 
+    @include fieldBorder();
+
     .element {
       padding-inline: 0.75rem;
       border-radius: 0.25rem;
       cursor: pointer;
 
-      @include option();
+      @include menuListItem();
 
       &:hover {
-        background-color: var(--c-shadow-100);
+        background-color: var(--c-shadow-200);
       }
     }
   }
