--- a/src/components/Buttons/Button/Button.style.scss
+++ b/src/components/Buttons/Button/Button.style.scss
@@ -1,12 +1,14 @@
+@use "styles/abstracts/mixins" as *;
 @use "styles/components/button" as *;
 
 .Button {
   padding: 0.75em 1.5em;
   border-radius: 0.375rem;
   font-size: 1rem;
-  font-weight: 600;
-  text-transform: uppercase;
-  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
 
   @include buttonVariants();
 }
