--- a/src/components/Form/PhoneNumberInput/PhoneNumberInput.style.scss
+++ b/src/components/Form/PhoneNumberInput/PhoneNumberInput.style.scss
@@ -8,4 +8,28 @@
   .dialNumber {
     flex: 5;
   }
+
+  .SelectionInput {
+    margin-inline: 0.5rem;
+
+    & > .FieldWrapper {
+      border-block-start: none;
+      border-start-start-radius: 0;
+      border-start-end-radius: 0;
+    }
+
+    .call {
+      width: 1.875rem;
+    }
+
+    .whatsapp {
+      width: 1.375rem;
+      margin-inline-end: 0.375rem;
+    }
+
+    .telegram {
+      width: 1.2rem;
+      margin-inline-end: 0.375rem;
+    }
+  }
 }
