--- a/src/context/Popup/Popup.style.scss
+++ b/src/context/Popup/Popup.style.scss
@@ -1,5 +1,3 @@
-/* POPUP */
-
 .Popup {
   display: flex;
   align-items: center;
@@ -19,29 +17,18 @@
     position: absolute;
     background-color: var(--c-white);
     min-width: 10rem;
-    max-height: calc(100vh - 4rem);
-    margin: 2rem 1rem;
-    display: grid;
-    gap: 1rem;
+    max-height: calc(100vh - 2rem);
+    margin: 1rem;
+    padding: 1rem;
 
     &.closable {
-      padding-block-start: 3rem;
+      padding-block-start: 4rem;
     }
 
-    .closeButton {
+    .CloseButton {
       position: absolute;
       top: 0.5rem;
       right: 0.5rem;
-      padding: 0.5rem;
-      width: 2rem;
-      height: 2rem;
-      border-radius: 50%;
-      text-transform: uppercase;
-      background-color: transparent;
-
-      &:hover {
-        background-color: var(--c-shadow-100);
-      }
     }
   }
 }
