--- a/src/pages/Customers/NewCustomer/NewCustomer.style.scss
+++ b/src/pages/Customers/NewCustomer/NewCustomer.style.scss
@@ -1,17 +1,6 @@
-/* NEW CUSTOMER */
+@use "styles/abstracts/mixins" as *;
 
 .NewCustomer {
-  position: relative;
-
-  .banner {
-    width: 100%;
-    max-height: 25rem;
-    object-fit: cover;
-    object-position: center;
-  }
-
-  .Form {
-    margin-inline: auto;
-    margin-block: 3rem;
-  }
+  @include banner();
+  @include floatingLanguageSelector();
 }
