--- a/src/pages/Students/NewStudent/NewStudent.style.scss
+++ b/src/pages/Students/NewStudent/NewStudent.style.scss
@@ -1,32 +1,6 @@
 @use "styles/abstracts/mixins" as *;
 
-/* NEW STUDENT */
 .NewStudent {
-  position: relative;
-
-  .banner {
-    width: 100%;
-    max-height: 25rem;
-    object-fit: cover;
-    object-position: center;
-  }
-
-  .Form {
-    margin-inline: auto;
-    margin-block: 3rem;
-
-    @include mobile {
-      margin-block-start: 0;
-    }
-  }
-}
-
-.SignUp,
-.NewStudent,
-.NewCustomer {
-  .LanguageSelector {
-    position: absolute;
-    top: 2rem;
-    right: 2rem;
-  }
+  @include banner();
+  @include floatingLanguageSelector();
 }
