--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -103,3 +103,22 @@ $sMobile: 35em; // can't use var in @media
   align-items: center;
   white-space: nowrap;
 }
+
+@mixin floatingLanguageSelector {
+  position: relative;
+
+  .LanguageSelector {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+  }
+}
+
+@mixin banner {
+  .banner {
+    width: 100%;
+    max-height: 25rem;
+    object-fit: cover;
+    object-position: center;
+  }
+}
